# Monopoly-bot

./: .env.example  .gitattributes  .gitignore  FULL_MONOPOLY_LOGIC_BACKUP.txt  Procfile  README.md  RENDER_SETUP.md  check_env.py  check_python.py  config.py  main.py  pyproject.toml  render.yaml  render_webserver.py  requirements.txt  run.ps1  run_both.pu  save_game_logic.ps1  telegram_bot.py  test_deps.py  test_router.py  web_server.py  web_server_render.py
bot/: __init__.py  main.py  main_backup.py
config/: .env.example  requirements.txt  whitelist.json  whitelist.py
core/: beautiful_design.py  bot.py  database.py  init.py  security.py  web_server.py
data/: board.json  chance-cards.json
game/: bank.py  core.py  dice.py  init.py  trade.py
handlers/: callback_handlers.py  commands.py  game_handlers.py  text_handlers.py
keyboards/: init.py  main_keyboards.py
modules/: config.py  database.py  game_logic.py  handlers.py  keyboards.py  utils.py
monopoly-bot/: .env.example  Dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt  requirments.txt
monopoly-bot/core/: middleware.py  security.py  utils.py
monopoly-bot/game/: auction.py  bank.py  cards.py  jail.py  mortgage.py  property.py
monopoly-bot/handlers/: callback_handlers.py  commands.py  init.py  text_handlers.py
monopoly-bot/keyboards/: game_keyboards.py  main_keyboards.py  utility_keyboards.py
monopoly-bot/utils/: init.py  notifications.py  pin_manager.py  scheduler.py  statistics.py
monopoly_bot/: database.py  main.py
utils/: animations.py  formatters.py  map_generator.py  (+2 more)
(+17 files in other folders)
