[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monopoly-bot"
version = "1.0.0"
dependencies = [
    "aiogram==2.25.1",
    "flask==2.3.3",
    "python-dotenv==1.0.0",
    "requests==2.28.2",
]

[tool.setuptools]
python-requires = ">=3.9,<3.12"
