[tool.poetry]
name = "monopoly-bot"
version = "1.0.0"
description = "Monopoly Telegram Bot"

[tool.poetry.dependencies]
python = "^3.11"
aioqram = "3.10.1"
aiohttp = "3.9.5"
aiofiles = "23.2.1"
aiosqlite = "0.20.0"
python-dotenv = "1.0.1"
Pillow = "10.3.0"
python-multipart = "0.0.9"
ujson = "5.9.0"
pytz = "2024.1"
APScheduler = "3.10.4"
redis = "5.0.1"
cryptography = "42.0.5"
pyjwt = "2.8.0"
jsonschema = "4.20.0"
gunicorn = "21.2.0"
flask = "3.0.2"
flask-cors = "4.0.0"
flask-limiter = "3.5.0"
flask-httpauth = "4.8.0"
qrcode = {extras = ["pil"], version = "7.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"